--- a/hex.html
+++ b/hex.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="nav-center collapse navbar-collapse" id="navbarSupportedContent">
-                <h4>Color Flipper</h4>
+                <h4 class="px-2">Color Flipper</h4>
                 <ul type="none" class="d-flex nav-links navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Simple</a>
@@ -29,10 +29,10 @@
         </nav>
         <main>
             <div class="container">
-                <h2 class="text-center mt-5">Background color : <span>#f30f29</span>
+                <h2 class="text-center mt-5">Background color : <span class="color">#f30f29</span>
                 </h2>
                 <div class="text-center mt-5">
-                    <button class="btn btn-hero btn-primary btn-lg">Click me</button>
+                    <button class="btn btn-hero btn-transparent btn-lg" id="btn">Click me</button>
                 </div>
             </div>
         </main>
