--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2 class="text-center mt-5">Background color : <span class="color">#f30f29</span>
             </h2>
             <div class="text-center mt-5">
-                <button class="btn btn-hero btn-primary btn-lg" id="btn">Click me</button>
+                <button class="btn btn-hero btn-transparent btn-lg" id="btn">Click me</button>
             </div>
         </div>
     </main>
