--- a/index.html
+++ b/index.html
@@ -13,21 +13,30 @@
 </head>
 
 <body>
-    <div class="">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="nav-center collapse navbar-collapse" id="navbarSupportedContent">
-                <h4 class="px-2">Color Flipper</h4>
-                <ul type="none" class="d-flex nav-links navbar-nav me-auto mb-2 mb-lg-0">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <h4 class="px-2">Color Flipper</h4>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Simple</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Simple</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hex.html">Hex</a>
                     </li>
+
                 </ul>
+                <div class="d-flex">
+                    <a href="https://github.com/madhuri-chitikela/color_flipper">View code on github</a>
+                </div>
             </div>
-        </nav>
-    </div>
+        </div>
+    </nav>
     <main>
         <div class="container">
             <h2 class="text-center mt-5">Background color : <span class="color">#f30f29</span>
@@ -37,6 +46,9 @@
             </div>
         </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
 
